# attentif

./: .gitignore  CLAUDE.md  DEBUG.md  DEBUG_PLATEAU.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: bert_vocab_test.ipynb  full_scratch_infer.ipynb  full_scratch_train.ipynb  hf_bert_infer.ipynb  hf_bert_train.ipynb  loss.ipynb  masked_lm.ipynb  masked_lm_demo.ipynb  minimal_training_usage.ipynb  roberta_vocab_test.ipynb
src/: __init__.py  causal_self_attention_head.py  causal_self_attention_head_test.py  dropout.py  dropout_test.py  feed_forward_network.py  feed_forward_network_test.py  layer_norm.py  layer_norm_test.py  mask.py  mask_causal.py  mask_causal_test.py  mask_padding.py  mask_padding_test.py  mask_test.py  masked_lm.py  mini_bert.py  multi_head_attention.py  multi_head_attention_test.py  positional_encoding.py  positional_encoding_test.py  single_head_attention.py  single_head_attention_test.py  softmax.py  softmax_test.py  token_embedding.py  token_embedding_test.py  transformer_encoder.py  transformer_encoder_block.py  transformer_encoder_block_test.py  transformer_encoder_test.py
src/layers/: __init__.py  dropout.py  dropout_test.py  feed_forward_network.py  feed_forward_network_test.py  layer_norm.py  mask_padding.py  multi_head_attention.py  multi_head_attention_test.py  positional_encoding.py  positional_encoding_test.py  relu.py  relu_test.py  transformer_decoder.py  transformer_decoder_block.py  transformer_encoder.py  transformer_encoder_block.py  transformer_encoder_block_test.py
src/models/: __init__.py  (+4 more)
(+2 files in other folders)
