[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attentif"
version = "0.1.0"
description = "A toy implementation of ”Attention Is All You Need”"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "jaxtyping>=0.3.3",
    "numpy>=2.3.3",
    "protobuf>=6.33.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-server>=1.13.1",
    "python-lsp-ruff>=2.3.0",
    "pytest-cov>=7.0.0",
]

# https://github.com/python-lsp/pylsp-mypy?tab=readme-ov-file#configuration
[tool.pylsp-mypy]
enabled = true
live_mode = false

[tool.setuptools.package-dir]
"attentif" = "src"

